<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:cardView="http://schemas.android.com/tools">


    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="30dp"
        cardView:cardElevation="4dp"
        cardView:cardPreventCornerOverlap="false"
        cardView:contentPadding="0dp">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/image_size5">
            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hi"
                android:gravity="center"
                android:textSize="@dimen/image_size15"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvUsername"
                android:textStyle="bold"

                android:layout_marginLeft="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dharamveer"
                android:gravity="center"
                android:textSize="@dimen/image_size15"
                android:textColor="@color/black"/>

            </LinearLayout>
            <TextView
                android:layout_margin="@dimen/image_size5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Good Morning"
                android:gravity="center"
                android:textSize="@dimen/image_size15"
                android:textColor="@color/greenHome"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white_greyish">
            </View>

            <TextView
                android:textSize="@dimen/image_size15"
                android:layout_marginLeft="@dimen/image_size5"
                android:layout_marginRight="@dimen/image_size5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_title"
                android:textColor="@color/black"
                />



            <LinearLayout
                android:layout_marginTop="@dimen/image_size5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/image_size5"
                android:layout_marginRight="@dimen/image_size5">


                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:id="@+id/spinTaskWel"
                    android:prompt="@string/defaultText"
                    android:textSize="20sp"
                    android:background="@android:drawable/btn_dropdown"/>

                <!--<Spinner-->
                <!--android:id="@+id/spinTask"-->
                <!--android:layout_width="match_parent"-->
                <!--android:padding="2dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:gravity="center"-->
                <!--android:prompt="@string/defaultText"-->
                <!--android:popupBackground="@color/orange"-->
                <!--android:background="@android:drawable/btn_dropdown"-->
                <!--android:spinnerMode="dropdown" />-->

            </LinearLayout>


            <TextView
                android:textSize="@dimen/image_size15"
                android:layout_marginLeft="@dimen/image_size5"
                android:layout_marginRight="@dimen/image_size5"
                android:layout_marginTop="@dimen/image_size5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_description"
                android:textColor="@color/black"
                />

            <EditText
                android:id="@+id/edEnterDescriptionWel"
                android:layout_marginLeft="@dimen/image_size5"
                android:layout_marginRight="@dimen/image_size5"
                android:layout_marginTop="@dimen/image_size5"
                android:padding="@dimen/image_size5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:lines="6"
                android:gravity="top|left"
                android:ems="10"
                android:inputType="textMultiLine"
                android:background="@drawable/edittextbackground"/>


            <Button
                android:id="@+id/btnSubmitTaskWel"
                android:textStyle="bold"
                android:textSize="@dimen/image_size10"
                android:padding="@dimen/image_size5"
                android:text="@string/submit_button"
                android:textColor="@color/white"
                android:layout_margin="@dimen/image_size5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonround"/>
        </LinearLayout>




    </android.support.v7.widget.CardView>


</RelativeLayout>